文言を変えた

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 
         <!-- 行・列追加グループ -->
         <div class="toolbar-group">
-        <button onclick="addRowTop()">上に行を追加</button>
-        <button onclick="addRowBottom()">下に行を追加</button>
-        <button onclick="addColumnLeft()">左に列を追加</button>
-        <button onclick="addColumnRight()">右に列を追加</button>
+        <button onclick="addRowTop()">上に追加</button>
+        <button onclick="addRowBottom()">下に追加</button>
+        <button onclick="addColumnLeft()">左に追加</button>
+        <button onclick="addColumnRight()">右に追加</button>
         </div>
 
         <!-- 行・列削除グループ -->
         <div class="toolbar-group">
-        <button onclick="removeRowTop()">上から行を削除</button>
-        <button onclick="removeRowBottom()">下から行を削除</button>
-        <button onclick="removeColumnLeft()">左から列を削除</button>
-        <button onclick="removeColumnRight()">右から列を削除</button>
+        <button onclick="removeRowTop()">上を削除</button>
+        <button onclick="removeRowBottom()">下を削除</button>
+        <button onclick="removeColumnLeft()">左を削除</button>
+        <button onclick="removeColumnRight()">右を削除</button>
         </div>
 
         <!-- その他操作グループ -->
