改行を増やした

--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
     <div id="toolbar">
         <!-- 一般設定グループ -->
         <div class="toolbar-group">
-        <input type="color" id="color-picker" value="#ff0000">
-        <select id="stitch-type">
-            <option value="knit">表目</option>
-            <option value="purl">裏目</option>
-            <option value="yo">かけ目</option>
-            <option value="right_up_two_one">右上2目一度</option>
-            <option value="left_up_two_one">左上2目一度</option>
-            <option value="purl_left_up_two_one">裏目の左上2目一度</option>
-            <option value="middle_up_three_one">中上3目一度</option>
-            <option value="right_up_three_one">右上3目一度</option>
-            <option value="left_up_three_one">左上3目一度</option>
-            <option value="right_up_two_cross">右上2目交差</option>
-            <option value="left_up_two_cross">左上2目交差</option>
-            <option value="slip_stitch">すべり目</option>
-            <option value="twist_stitch">ねじり目</option>
-        </select>
+            <input type="color" id="color-picker" value="#ff0000">
+            <select id="stitch-type">
+                <option value="knit">表目</option>
+                <option value="purl">裏目</option>
+                <option value="yo">かけ目</option>
+                <option value="right_up_two_one">右上2目一度</option>
+                <option value="left_up_two_one">左上2目一度</option>
+                <option value="purl_left_up_two_one">裏目の左上2目一度</option>
+                <option value="middle_up_three_one">中上3目一度</option>
+                <option value="right_up_three_one">右上3目一度</option>
+                <option value="left_up_three_one">左上3目一度</option>
+                <option value="right_up_two_cross">右上2目交差</option>
+                <option value="left_up_two_cross">左上2目交差</option>
+                <option value="slip_stitch">すべり目</option>
+                <option value="twist_stitch">ねじり目</option>
+            </select>
+        </div>
+
+        <!-- グリッド設定グループ -->
+        <div class="toolbar-group">
         <label for="grid-rows-input">行数:</label>
         <input type="number" id="grid-rows-input" value="20" min="1">
         <label for="grid-cols-input">列数:</label>
