列と列の間に列を追加できるようにした．行も同じく

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       <button id="add-col-right">右に追加</button>
     </div>
 
+    <!-- 行・列間追加グループ -->
+    <div class="toolbar-group">
+      <button id="insert-row-between">行間に行を追加</button>
+      <button id="insert-col-between">列間に列を追加</button>
+    </div>
+
     <!-- 行・列削除グループ -->
     <div class="toolbar-group">
       <button id="remove-row-top">上を削除</button>
