列番号と行番号を指定して削除できるようにした

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       <button id="remove-col-right">右を削除</button>
     </div>
 
+    <!-- 指定行・列削除グループ -->
+    <div class="toolbar-group">
+      <button id="remove-row-at">指定行削除</button>
+      <button id="remove-col-at">指定列削除</button>
+    </div>
+
     <!-- その他操作グループ -->
     <div class="toolbar-group">
       <button id="download-chart">画像保存</button>
