数字入力フォームを追加

--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
     </div>
   </div>
 
+  <!-- 数字入力用のカスタムモーダル -->
+  <div id="number-prompt-modal" class="number-prompt-modal" style="display: none;">
+    <div class="number-prompt-content">
+      <div class="number-prompt-message"></div>
+      <input type="number" id="number-prompt-input" />
+      <div class="number-prompt-buttons">
+        <button id="number-prompt-cancel">キャンセル</button>
+        <button id="number-prompt-ok">OK</button>
+      </div>
+    </div>
+  </div>
+
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
