見た目をよくした

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>棒針編み図エディタ</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/theme.css">
 </head>
 <body>
+  <header>
+    <h1>棒針編み図エディタ</h1>
+    <p>シンプルで使いやすい編み図作成ツール</p>
+  </header>
+
   <div id="toolbar">
     <!-- 一般設定グループ -->
     <div class="toolbar-group">
