--- a/index.html
+++ b/index.html
@@ -107,5 +107,10 @@
 
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script type="module" src="js/main.js"></script>
+  
+  <!-- フッターの追加 -->
+  <footer>
+    <p>&copy; 2025 棒針編み図エディタ All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
