--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VVE0G4ZFL4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-VVE0G4ZFL4');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>棒針編み図エディタ</title>
@@ -110,6 +120,19 @@
   
   <!-- フッターの追加 -->
   <footer>
+    <div class="privacy-section">
+      <h2>Googleアナリティクスについて</h2>
+      <p>当社のWebサイトでは、サービス品質向上のため、Google 社のサービスであるGoogle Analyticsを利用しお客様の訪問情報を取得しています。</p>
+      <p>当社が発行するCookieをもとにして、お客様の訪問履歴を収集・記録・分析します。</p>
+      <p>Google Analyticsにより収集・記録・分析されたお客様の情報には、特定の個人を識別する情報は一切含まれません。それらの情報は、Google社により同社のプライバシーポリシーに基づいて管理されます。</p>
+      <p>Google Analyticsの利用規約、Google社のプライバシーポリシーについては、以下のリンクをご覧ください。</p>
+      <p>
+        <a href="https://marketingplatform.google.com/about/analytics/terms/jp/" target="_blank">Google Analytics利用規約</a>
+      </p>
+      <p>
+        <a href="https://policies.google.com/privacy?hl=ja" target="_blank">Googleのプライバシーポリシー</a>
+      </p>
+    </div>
     <p>&copy; 2025 棒針編み図エディタ All Rights Reserved.</p>
   </footer>
 </body>
