--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- メタタグ -->
+  <meta name="description" content="無料の棒針編み図エディタ。シンプルなUIと使いやすいツールで、オリジナルの編み図を作成できます。">
+  <meta name="keywords" content="棒針, 編み図, エディタ, 手芸, ハンドメイド">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://knittingeditor.com">
+  
   <title>棒針編み図エディタ</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/theme.css">
