Replace 行数 label with 段数

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- グリッド設定グループ -->
     <div class="toolbar-group">
-      <label for="grid-rows-input">行数:</label>
+      <label for="grid-rows-input">段数:</label>
       <input type="number" id="grid-rows-input" value="20" min="1">
       <label for="grid-cols-input">列数:</label>
       <input type="number" id="grid-cols-input" value="20" min="1">
